grammar.js
    source_file: ($) => repeat($._statement),

    // ----------------------------------------------------------------------------
    // Statements / top-level-ish forms
    // ----------------------------------------------------------------------------
    //
    // NOTE: Order matters. Try the most “keyworded/specific” forms first.
    _statement: ($) =>
      choice(
        $.import_statement,
        $.fixity_declaration,
        $.type_alias_declaration,
        $.declaration,
        $.value_definition,
      ),

    // import a.b
    declaration: ($) =>
      prec.right(
        PREC.assignment,
        seq(
          field("name", $.term_identifier),
          field("colon", $.colon),
          field("type", $.type),
          optional(
            seq(
              field("name2", $.term_identifier),
              field("equals", $.equals),
              field("value", $.expr),
            ),
          ),
        ),
      ),

    // x = expr
    //
    // This must reduce cleanly at EOF, otherwise Zed will show (ERROR ...) for the
    // whole definition block and cascade into spurious errors.
    //
    // Keep this rule *structurally simple* so the parser can reduce it immediately
    // once `value` is complete.
    value_definition: ($) =>
      prec.right(
        PREC.assignment,
        seq(
          field("name", $.term_identifier),
          field("equals", $.equals),
          field("value", $.expr),
        ),
      ),

    // ----------------------------------------------------------------------------
    // Types
    // ----------------------------------------------------------------------------
    // Upstream allows base types (`Integer`, `Boolean`, `Character`, `Unit`) and named
    // types as full types, so `x : Integer` is valid.
    //
    // Our previous grammar only accepted `type_expr` (which requires `->` or `forall`)
    // at the top level, so `x : Integer` could not parse as a declaration.
    type: ($) => choice($.type_expr, $.type_primary),
    type_expr: ($) => choice($.forall_type, $.type_arrow),

    // forall T, TypeExpr
    type_primary: ($) =>
      choice(
        $.type_identifier, // includes '_' hole
        $.type_parens,
        $.type_prod,
        $.type_list_brackets,
        $.type_app,
      ),

    type_list_brackets: ($) =>
      seq(
        field("lbrack", $.lbrack),
        field("type", $.type_expr),
        field("rbrack", $.rbrack),
      ),

    expr: ($) =>
      choice(
        $.if_expression,
        $.let_expression,
        $.fun_expression,
        $.tfun_expression,
        $.case_expression,
        $.lcase_expression,
        $.infix_expression,
      ),

    // if e then e else e
    if_expression: ($) =>
      seq(
        field("if", $.kw_if),
        field("cond", $.expr),
        field("then", $.kw_then),
        field("then_expr", $.expr),
        field("else", $.kw_else),
        field("else_expr", $.expr),
      ),

    // let x = e in e
    //
    // IMPORTANT:
    // Use `infix_expression` (not full `expr`) for the value position. This ensures
    // that after parsing a simple literal like `2`, the parser is in a state that can
    // immediately accept `kw_in`, rather than trying to continue as a larger `expr`.
    fun_expression: ($) =>
      seq(
        field("fun", $.kw_fun),
        field("param", $.term_identifier_or_hole),
        field("colon", $.colon),
        field("type", $.type_expr),
        field("comma", $.comma),
        field("body", $.expr),
      ),

    // fun T, e   (type abstraction)
    tfun_expression: ($) =>
      seq(
        field("fun", $.kw_fun),
        field("tparam", $.type_identifier),
        optional(seq(field("colon", $.colon), field("sort", $.kw_Type))),
        field("comma", $.comma),
        field("body", $.expr),
      ),

    case_expression: ($) =>
      seq(
        field("case", $.kw_case),
        field("scrutinee", $.expr),
        field("of", $.kw_of),
        optional(field("lbrace", $.lbrace)),
        repeat1($.case_arm),
        optional(field("rbrace", $.rbrace)),
      ),

    case_arm: ($) =>
      seq(
        field("bar", $.bar),
        field("ctor", choice($.kw_inl, $.kw_inr)),
        field("binder", $.term_identifier_or_hole),
        field("arrow", $.fat_arrow),
        field("body", $.expr),
      ),

    _atom: ($) =>
      choice(
        $.integer,
        $.boolean,
        $.unit,
        $.term_identifier,
        $.term_parens,
        $.pair,
        $.list_literal,
        $.injection,
        $.nil_term,
        $.io_primitive,
        $.char_literal,
        $.string_literal,
      ),

    application: ($) =>
      prec.left(
        PREC.application,
        seq(
          field("function", $._atom),
          repeat1(field("argument", $.app_argument)),
        ),
      ),

    // Arguments can be term atoms or type primaries (for type application `TApp` surface forms).
    app_argument: ($) => choice($._atom, $.type_primary),

    // Prefix operator application at term level:
    //   OP e
    infix_expression: ($) =>
      prec.left(
        PREC.infix,
        seq(
          field("left", $.application_or_primary),
          repeat(
            seq(
              field("operator", $.operator),
              field("right", $.application_or_primary),
            ),
          ),
        ),
      ),

    application_or_primary: ($) => choice($.application, $._atom),

    // Term primaries:
    // Kept for compatibility with existing highlight queries and node names.
    // Internally, the expression grammar prefers `_atom`.
    term_primary: ($) => $._atom,

    term_parens: ($) =>
      seq(
        field("lparen", $.lparen),
        field("expr", $.expr),
        field("rparen", $.rparen),
      ),

    list_literal: ($) =>
      seq(
        field("lbrack", $.lbrack),
        optional(
          seq(
            field("head", $.expr),
            repeat(seq(field("comma", $.comma), field("tail", $.expr))),
            optional(field("trailing_comma", $.comma)),
          ),
        ),
        field("colon", $.colon),
        field("type", $.type_expr),
        field("rbrack", $.rbrack),
      ),

    nil_term: ($) => seq(field("nil", $.kw_nil), field("type", $.type_primary)),

    integer: (_) => token(/[0-9]+/),

    term_identifier: (_) => token(/[a-z][A-Za-z0-9._']*/),

    term_identifier_or_hole: (_) => token(choice("_", /[a-z][A-Za-z0-9._']*/)),

    type_identifier: (_) => token(choice("_", /[A-Z][A-Za-z0-9]*/)),

    // ----------------------------------------------------------------------------
    // Comments
    // ----------------------------------------------------------------------------
    lparen: (_) => token("("),
    rparen: (_) => token(")"),
    lbrack: (_) => token("["),
    rbrack: (_) => token("]"),
    comma: (_) => token(","),
    colon: (_) => token(":"),
    bar: (_) => token("|"),

    equals: (_) => token("="),

    arrow: (_) => token("->"),

    fat_arrow: (_) => token("=>"),

    operator: (_) =>
      token(
        choice(
          "-",
          seq("-", /[^.>\s\w()\[\]{},:|=]/, /[^.\s\w()\[\]{},:|=]*/),
          /[^.\s\w()\[\]{},:|=|-][^.\s\w()\[\]{},:|=]*/,
        ),
      ),

    // ----------------------------------------------------------------------------
    // Keywords
    // ----------------------------------------------------------------------------
    // Give keywords higher precedence than identifiers so they never get tokenized
    // as `term_identifier`/`type_identifier` in ambiguous contexts.
    kw_fun: (_) => token(prec(2, "fun")),
    kw_forall: (_) => token(prec(2, "forall")),
    kw_if: (_) => token(prec(2, "if")),
    kw_then: (_) => token(prec(2, "then")),
    kw_else: (_) => token(prec(2, "else")),

    kw_case: (_) => token(prec(2, "case")),
    kw_of: (_) => token(prec(2, "of")),

    kw_nil: (_) => token(prec(2, "nil")),
    kw_inl: (_) => token(prec(2, "inl")),
    kw_inr: (_) => token(prec(2, "inr")),
