test/corpus/functions.txt
================================================================================
Simple function expression
================================================================================

id = fun n : Int, n

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))
          comma: (comma)
          body: (expr
            (infix_expression
              left: (application_or_primary
                (term_primary
                  (term_identifier)))))))))
  (newline))

================================================================================
Curried function (multiple fun)
================================================================================

add = fun x : Int, fun y : Int, x + y

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))
          comma: (comma)
          body: (expr
            (fun_expression
              fun: (kw_fun)
              param: (term_identifier_or_hole)
              colon: (colon)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              comma: (comma)
              body: (expr
                (infix_expression
                  left: (application_or_primary
                    (term_primary
                      (term_identifier)))
                  operator: (operator)
                  right: (application_or_primary
                    (term_primary
                      (term_identifier)))))))))))
  (newline))

================================================================================
Polymorphic function (forall)
================================================================================

tru : forall T, T -> T -> T
tru = fun T, fun x : T, fun y : T, x

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        keyword: (kw_forall)
        tvar: (type_identifier)
        comma: (comma)
        body: (type_expr
          left: (type_sum_or_primary
            (type_primary
              (type_identifier)))
          arrow: (arrow)
          right: (type
            (type_expr
              left: (type_sum_or_primary
                (type_primary
                  (type_identifier)))
              arrow: (arrow)
              right: (type
                (type_expr
                  left: (type_sum_or_primary
                    (type_primary
                      (type_identifier)))))))))))
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (tfun_expression
          fun: (kw_fun)
          tparam: (type_identifier)
          comma: (comma)
          body: (expr
            (fun_expression
              fun: (kw_fun)
              param: (term_identifier_or_hole)
              colon: (colon)
              type: (type_expr
                left: (type_sum_or_primary
                  (type_primary
                    (type_identifier))))
              comma: (comma)
              body: (expr
                (fun_expression
                  fun: (kw_fun)
                  param: (term_identifier_or_hole)
                  colon: (colon)
                  type: (type_expr
                    left: (type_sum_or_primary
                      (type_primary
                        (type_identifier))))
                  comma: (comma)
                  body: (expr
                    (infix_expression
                      left: (application_or_primary
                        (term_primary
                          (term_identifier)))))))))))))
  (newline))

================================================================================
Function with hole parameter
================================================================================

const = fun _ : Int, 42

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))
          comma: (comma)
          body: (expr
            (infix_expression
              left: (application_or_primary
                (term_primary
                  (integer)))))))))
  (newline))
